fix overflow

--- a/src/app/appframe/sidenav/sidenav.component.scss
+++ b/src/app/appframe/sidenav/sidenav.component.scss
@@ -41,6 +41,7 @@
   .responsive-body {
     max-width: $body-max-width;
     margin: 32px;
+    overflow-x: hidden;
 
     :host-context(.mobile) & {
       margin: 0;
